post, postLit, postAttachment 로그인 컨트롤러, 서비스 수정